# GAE-Delta

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py
configs/: config.yaml
configs/data/: paths.yaml
configs/experiment/: default.yaml
configs/model/: gae.yaml  mlp.yaml
csrc/: CMakeLists.txt
csrc/include/: knn_regressor.h
csrc/src/: bindings.cpp  knn_regressor.cpp
data/example/: toy_demo.h5  toy_fi_network.txt
gae_delta/: __init__.py
gae_delta/core/graph/: __init__.py  _adjacency.pyx  _correlation.pyx  builder.py  features.py
gae_delta/core/model/: __init__.py  decoder.py  encoder.py  gae.py  mlp.py
gae_delta/core/selection/: __init__.py  isolation_forest.py
gae_delta/core/shift/: __init__.py  embedding.py  fusion.py  knn_residual.py
gae_delta/data/network/: reactome_fi.py
gae_delta/data/tcga/: clinical.py  cnv.py  loader.py  methylation.py  rna.py
gae_delta/data/transforms/: normalize.py
gae_delta/evaluation/: cross_validation.py  metrics.py
gae_delta/pipeline/: __main__.py  runner.py  stage1_preprocess.py  stage2_graph.py  stage3_train_gae.py  stage4_select_embed.py  stage5_classify.py
gae_delta/utils/: io.py  logging.py  registry.py  seed.py
scripts/: generate_toy_data.py  run_experiment.sh
tests/: test_gae_model.py  test_graph_builder.py  test_shift.py
