[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "Cython>=0.29.30",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gae-delta"
dynamic = ["version"]
description = "GAE-Δ: Graph Autoencoder-based framework for outcome-specific gene role shifts in multi-omics cancer data"
readme = "README.md"
license = {text = "CC-BY-NC-ND-4.0"}
requires-python = ">=3.9,<3.10"
authors = [
    {name = "GAE-Delta Authors"},
]
dependencies = [
    "torch>=1.13.0,<2.0.0",
    "torch-geometric>=2.3.0,<2.4.0",
    "numpy>=1.24.0,<1.25.0",
    "scipy>=1.10.0,<1.11.0",
    "scikit-learn>=1.2.0,<1.3.0",
    "pandas>=2.0.0,<2.1.0",
    "h5py>=3.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
vis = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.dynamic]
version = {attr = "gae_delta._version.__version__"}

[tool.setuptools.packages.find]
include = ["gae_delta*"]
